// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot: components/RandomNumber.jsx with default display function 1`] = `
<mocked-component
  _reactInternalInstance={
    ReactCompositeComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <MockedComponent
        zDepth={0}
    >
        <span
            className="label"
            style={Object {}}
        >
            Random Number
            : 
        </span>
        <span
            className="value"
            style={Object {}}
        >
            0.123456789
        </span>
    </MockedComponent>,
      "_hostContainerInfo": Object {
        "createNodeMock": [Function],
      },
      "_hostParent": null,
      "_instance": MockedComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [
            <span
              className="label"
              style={Object {}}
    >
              Random Number
              : 
    </span>,
            <span
              className="value"
              style={Object {}}
    >
              0.123456789
    </span>,
          ],
          "zDepth": 0,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountImage": null,
      "_mountIndex": 0,
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": <mocked-component
        _reactInternalInstance={[Circular]}
        context={Object {}}
        props={
            Object {
                "children": Array [
                  <span
                    className="label"
                    style={Object {}}
            >
                    Random Number
                    : 
            </span>,
                  <span
                    className="value"
                    style={Object {}}
            >
                    0.123456789
            </span>,
                ],
                "zDepth": 0,
              }
        }
        refs={Object {}}
        state={null}
        updater={
            Object {
                "enqueueCallback": [Function],
                "enqueueCallbackInternal": [Function],
                "enqueueElementInternal": [Function],
                "enqueueForceUpdate": [Function],
                "enqueueReplaceState": [Function],
                "enqueueSetState": [Function],
                "isMounted": [Function],
                "validateCallback": [Function],
              }
        }
    />,
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    }
  }
  context={Object {}}
  props={
    Object {
      "children": Array [
        <span
          className="label"
          style={Object {}}
    >
          Random Number
          : 
    </span>,
        <span
          className="value"
          style={Object {}}
    >
          0.123456789
    </span>,
      ],
      "zDepth": 0,
    }
  }
  refs={Object {}}
  state={null}
  updater={
    Object {
      "enqueueCallback": [Function],
      "enqueueCallbackInternal": [Function],
      "enqueueElementInternal": [Function],
      "enqueueForceUpdate": [Function],
      "enqueueReplaceState": [Function],
      "enqueueSetState": [Function],
      "isMounted": [Function],
      "validateCallback": [Function],
    }
  }
/>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 1`] = `
<mocked-component
  _reactInternalInstance={
    ReactCompositeComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <MockedComponent
        zDepth={0}
    >
        <span
            className="label"
            style={Object {}}
        >
            Random Number
            : 
        </span>
        <span
            className="value"
            style={Object {}}
        >
            {"value":0.123456789}
        </span>
    </MockedComponent>,
      "_hostContainerInfo": Object {
        "createNodeMock": [Function],
      },
      "_hostParent": null,
      "_instance": MockedComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [
            <span
              className="label"
              style={Object {}}
    >
              Random Number
              : 
    </span>,
            <span
              className="value"
              style={Object {}}
    >
              {"value":0.123456789}
    </span>,
          ],
          "zDepth": 0,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountImage": null,
      "_mountIndex": 0,
      "_mountOrder": 6,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": <mocked-component
        _reactInternalInstance={[Circular]}
        context={Object {}}
        props={
            Object {
                "children": Array [
                  <span
                    className="label"
                    style={Object {}}
            >
                    Random Number
                    : 
            </span>,
                  <span
                    className="value"
                    style={Object {}}
            >
                    {"value":0.123456789}
            </span>,
                ],
                "zDepth": 0,
              }
        }
        refs={Object {}}
        state={null}
        updater={
            Object {
                "enqueueCallback": [Function],
                "enqueueCallbackInternal": [Function],
                "enqueueElementInternal": [Function],
                "enqueueForceUpdate": [Function],
                "enqueueReplaceState": [Function],
                "enqueueSetState": [Function],
                "isMounted": [Function],
                "validateCallback": [Function],
              }
        }
    />,
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    }
  }
  context={Object {}}
  props={
    Object {
      "children": Array [
        <span
          className="label"
          style={Object {}}
    >
          Random Number
          : 
    </span>,
        <span
          className="value"
          style={Object {}}
    >
          {"value":0.123456789}
    </span>,
      ],
      "zDepth": 0,
    }
  }
  refs={Object {}}
  state={null}
  updater={
    Object {
      "enqueueCallback": [Function],
      "enqueueCallbackInternal": [Function],
      "enqueueElementInternal": [Function],
      "enqueueForceUpdate": [Function],
      "enqueueReplaceState": [Function],
      "enqueueSetState": [Function],
      "isMounted": [Function],
      "validateCallback": [Function],
    }
  }
/>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 2`] = `
<mocked-component
  _reactInternalInstance={
    ReactCompositeComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <MockedComponent
        zDepth={0}
    >
        <span
            className="label"
            style={Object {}}
        >
            Random Number
            : 
        </span>
        <span
            className="value"
            style={Object {}}
        >
            1f9add3739635f
        </span>
    </MockedComponent>,
      "_hostContainerInfo": Object {
        "createNodeMock": [Function],
      },
      "_hostParent": null,
      "_instance": MockedComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [
            <span
              className="label"
              style={Object {}}
    >
              Random Number
              : 
    </span>,
            <span
              className="value"
              style={Object {}}
    >
              1f9add3739635f
    </span>,
          ],
          "zDepth": 0,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountImage": null,
      "_mountIndex": 0,
      "_mountOrder": 9,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": <mocked-component
        _reactInternalInstance={[Circular]}
        context={Object {}}
        props={
            Object {
                "children": Array [
                  <span
                    className="label"
                    style={Object {}}
            >
                    Random Number
                    : 
            </span>,
                  <span
                    className="value"
                    style={Object {}}
            >
                    1f9add3739635f
            </span>,
                ],
                "zDepth": 0,
              }
        }
        refs={Object {}}
        state={null}
        updater={
            Object {
                "enqueueCallback": [Function],
                "enqueueCallbackInternal": [Function],
                "enqueueElementInternal": [Function],
                "enqueueForceUpdate": [Function],
                "enqueueReplaceState": [Function],
                "enqueueSetState": [Function],
                "isMounted": [Function],
                "validateCallback": [Function],
              }
        }
    />,
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    }
  }
  context={Object {}}
  props={
    Object {
      "children": Array [
        <span
          className="label"
          style={Object {}}
    >
          Random Number
          : 
    </span>,
        <span
          className="value"
          style={Object {}}
    >
          1f9add3739635f
    </span>,
      ],
      "zDepth": 0,
    }
  }
  refs={Object {}}
  state={null}
  updater={
    Object {
      "enqueueCallback": [Function],
      "enqueueCallbackInternal": [Function],
      "enqueueElementInternal": [Function],
      "enqueueForceUpdate": [Function],
      "enqueueReplaceState": [Function],
      "enqueueSetState": [Function],
      "isMounted": [Function],
      "validateCallback": [Function],
    }
  }
/>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 3`] = `
<mocked-component
  _reactInternalInstance={
    ReactCompositeComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <MockedComponent
        zDepth={0}
    >
        <span
            className="label"
            style={Object {}}
        >
            Random Number
            : 
        </span>
        <span
            className="value"
            style={Object {}}
        >
            4fzzzxjylrx
        </span>
    </MockedComponent>,
      "_hostContainerInfo": Object {
        "createNodeMock": [Function],
      },
      "_hostParent": null,
      "_instance": MockedComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [
            <span
              className="label"
              style={Object {}}
    >
              Random Number
              : 
    </span>,
            <span
              className="value"
              style={Object {}}
    >
              4fzzzxjylrx
    </span>,
          ],
          "zDepth": 0,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountImage": null,
      "_mountIndex": 0,
      "_mountOrder": 12,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": <mocked-component
        _reactInternalInstance={[Circular]}
        context={Object {}}
        props={
            Object {
                "children": Array [
                  <span
                    className="label"
                    style={Object {}}
            >
                    Random Number
                    : 
            </span>,
                  <span
                    className="value"
                    style={Object {}}
            >
                    4fzzzxjylrx
            </span>,
                ],
                "zDepth": 0,
              }
        }
        refs={Object {}}
        state={null}
        updater={
            Object {
                "enqueueCallback": [Function],
                "enqueueCallbackInternal": [Function],
                "enqueueElementInternal": [Function],
                "enqueueForceUpdate": [Function],
                "enqueueReplaceState": [Function],
                "enqueueSetState": [Function],
                "isMounted": [Function],
                "validateCallback": [Function],
              }
        }
    />,
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    }
  }
  context={Object {}}
  props={
    Object {
      "children": Array [
        <span
          className="label"
          style={Object {}}
    >
          Random Number
          : 
    </span>,
        <span
          className="value"
          style={Object {}}
    >
          4fzzzxjylrx
    </span>,
      ],
      "zDepth": 0,
    }
  }
  refs={Object {}}
  state={null}
  updater={
    Object {
      "enqueueCallback": [Function],
      "enqueueCallbackInternal": [Function],
      "enqueueElementInternal": [Function],
      "enqueueForceUpdate": [Function],
      "enqueueReplaceState": [Function],
      "enqueueSetState": [Function],
      "isMounted": [Function],
      "validateCallback": [Function],
    }
  }
/>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 4`] = `
<mocked-component
  _reactInternalInstance={
    ReactCompositeComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <MockedComponent
        zDepth={0}
    >
        <span
            className="label"
            style={Object {}}
        >
            Random Number
            : 
        </span>
        <span
            className="value"
            style={Object {}}
        >
            0.01524157875019052
        </span>
    </MockedComponent>,
      "_hostContainerInfo": Object {
        "createNodeMock": [Function],
      },
      "_hostParent": null,
      "_instance": MockedComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [
            <span
              className="label"
              style={Object {}}
    >
              Random Number
              : 
    </span>,
            <span
              className="value"
              style={Object {}}
    >
              0.01524157875019052
    </span>,
          ],
          "zDepth": 0,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountImage": null,
      "_mountIndex": 0,
      "_mountOrder": 15,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": <mocked-component
        _reactInternalInstance={[Circular]}
        context={Object {}}
        props={
            Object {
                "children": Array [
                  <span
                    className="label"
                    style={Object {}}
            >
                    Random Number
                    : 
            </span>,
                  <span
                    className="value"
                    style={Object {}}
            >
                    0.01524157875019052
            </span>,
                ],
                "zDepth": 0,
              }
        }
        refs={Object {}}
        state={null}
        updater={
            Object {
                "enqueueCallback": [Function],
                "enqueueCallbackInternal": [Function],
                "enqueueElementInternal": [Function],
                "enqueueForceUpdate": [Function],
                "enqueueReplaceState": [Function],
                "enqueueSetState": [Function],
                "isMounted": [Function],
                "validateCallback": [Function],
              }
        }
    />,
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    }
  }
  context={Object {}}
  props={
    Object {
      "children": Array [
        <span
          className="label"
          style={Object {}}
    >
          Random Number
          : 
    </span>,
        <span
          className="value"
          style={Object {}}
    >
          0.01524157875019052
    </span>,
      ],
      "zDepth": 0,
    }
  }
  refs={Object {}}
  state={null}
  updater={
    Object {
      "enqueueCallback": [Function],
      "enqueueCallbackInternal": [Function],
      "enqueueElementInternal": [Function],
      "enqueueForceUpdate": [Function],
      "enqueueReplaceState": [Function],
      "enqueueSetState": [Function],
      "isMounted": [Function],
      "validateCallback": [Function],
    }
  }
/>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 5`] = `
<mocked-component
  _reactInternalInstance={
    ReactCompositeComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <MockedComponent
        zDepth={0}
    >
        <span
            className="label"
            style={Object {}}
        >
            Random Number
            : 
        </span>
        <span
            className="value"
            style={Object {}}
        >
            0, 0.123456789, 0.246913578, 0.370370367
        </span>
    </MockedComponent>,
      "_hostContainerInfo": Object {
        "createNodeMock": [Function],
      },
      "_hostParent": null,
      "_instance": MockedComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [
            <span
              className="label"
              style={Object {}}
    >
              Random Number
              : 
    </span>,
            <span
              className="value"
              style={Object {}}
    >
              0, 0.123456789, 0.246913578, 0.370370367
    </span>,
          ],
          "zDepth": 0,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountImage": null,
      "_mountIndex": 0,
      "_mountOrder": 18,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": <mocked-component
        _reactInternalInstance={[Circular]}
        context={Object {}}
        props={
            Object {
                "children": Array [
                  <span
                    className="label"
                    style={Object {}}
            >
                    Random Number
                    : 
            </span>,
                  <span
                    className="value"
                    style={Object {}}
            >
                    0, 0.123456789, 0.246913578, 0.370370367
            </span>,
                ],
                "zDepth": 0,
              }
        }
        refs={Object {}}
        state={null}
        updater={
            Object {
                "enqueueCallback": [Function],
                "enqueueCallbackInternal": [Function],
                "enqueueElementInternal": [Function],
                "enqueueForceUpdate": [Function],
                "enqueueReplaceState": [Function],
                "enqueueSetState": [Function],
                "isMounted": [Function],
                "validateCallback": [Function],
              }
        }
    />,
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
    }
  }
  context={Object {}}
  props={
    Object {
      "children": Array [
        <span
          className="label"
          style={Object {}}
    >
          Random Number
          : 
    </span>,
        <span
          className="value"
          style={Object {}}
    >
          0, 0.123456789, 0.246913578, 0.370370367
    </span>,
      ],
      "zDepth": 0,
    }
  }
  refs={Object {}}
  state={null}
  updater={
    Object {
      "enqueueCallback": [Function],
      "enqueueCallbackInternal": [Function],
      "enqueueElementInternal": [Function],
      "enqueueForceUpdate": [Function],
      "enqueueReplaceState": [Function],
      "enqueueSetState": [Function],
      "isMounted": [Function],
      "validateCallback": [Function],
    }
  }
/>
`;
